# OOP_VUZ

lab1/: CMakeLists.txt
lab1/src/: Solution.cpp  main.cpp
lab1/test/: tests.cpp
lab1/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab1  tests
lab2/: CMakeLists.txt
lab2/include/: nmBitString.hpp
lab2/src/: main.cpp  nmBitString.cpp
lab2/tests/: tests.cpp
lab2/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab2  tests
lab3/: CMakeLists.txt
lab3/include/: Figure.hpp  FigureList.hpp  Hexagon.hpp  Octagon.hpp  Point.hpp  Triangle.hpp  Vector.hpp
lab3/src/: main.cpp
lab3/tests/: test.cpp
lab3/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab3  tests
lab4/: CMakeLists.txt
lab4/include/: Figure.hpp  FigureArray.hpp  Hexagon.hpp  Octagon.hpp  Point.hpp  Triangle.hpp
lab4/src/: main.cpp
lab4/tests/: test.cpp
lab4/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab4  tests
lab5/: CMakeLists.txt  main.cpp
lab5/include/: allocator.hpp  list.hpp
lab5/tests/: test.cpp
lab5/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab5  tests
lab6/: CMakeLists.txt
lab6/src/: main.cpp
lab6/tests/: test.cpp
lab6/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fight_stats.txt  lab6  npc.txt  tests
lab7/: CMakeLists.txt
lab7/src/: main.cpp
lab7/test/: test.cpp
lab7/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab6  npc.txt  tests
(+10 files in other folders)
